<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AutoMate</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
     
    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >Routines</item>
        <item >Locations</item>
        <item >Settings</item>
        <item >Help</item>
    </string-array>
     
    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_routines</item>
        <item>@drawable/ic_locations</item>
        <item>@drawable/ic_actionset</item>
        <item>@drawable/ic_log</item>
        <item>@drawable/ic_settings</item>
        <item>@drawable/ic_help</item>
    </array>
    
    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    
    <!-- Locations Activity and Fragment-->
    <string name="find">Find</string>
    <string name="enter_place">Enter Location Address</string>
    <string name="enter_radius">Enter Radius (m)</string>
    <string name="enter_name">Enter Name</string>
    <string name="add">Add</string>
    <string name="add_location">Add Location</string>
	
    <!-- ActionBar-->
    <string name="action_edit">Edit</string>
    <string name="action_discard">Discard</string>
    <string name="print">Print</string>
    
    <!-- First Run -->
    <string name="welcome">Welcome To\nAutoMate</string>
    <string name="continues">Tap Anywhere To Continue</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    
    <!-- Settings -->
    <string name="services">Services</string>
    <string name="enable_routines">Enable Routines</string>
    <string name="routines_d">Enabling Routines allows Triggers to perform Actions</string>
    <string name="enable_learning">Enable Learning</string>
    <string name="learning_d">Enabling learning lets AutoMate learn your Routines</string>
    
    <!-- Routines -->
    <string name="add_routine">Add Routine</string>
    <string name="save">Save</string>
    <string name="Name">Name</string>
    <string name="add_trigger">Add Trigger</string>
    <string name="add_action">Add Action</string>
    <string name="triggers">Triggers</string>
    <string name="actions">Actions</string>
    <string name="trigger">Trigger</string>
    <string name="OK">OK</string>
    <string name="enabled">Enabled</string>
    <string name="dismiss">Dismiss</string>
    
    <string name="Help"><b>Routine</b>\nA trigger-action pair to be automated\n\n<b>Trigger</b>\nConditions that are to be met\n\n<b>Action</b>\nA behaviour that will be performed</string>
</resources>
